# FinalCheck

./: .gitignore  Law label_20250214.xlsx  README.md  main.py  pyproject.toml  requirements.txt  utils.py
finalcheck/: __init__.py  app.py  product_types.py  utils.py
